resharper/resharper-unity/test/data/CSharp/Intentions/QuickFixes/InvalidSignature/Availability/ReorderParameters.cs
using UnityEngine;

public class Foo : MonoBehaviour
{
    public void OnAudioFilterRead(int chann{caret}els, float[] data)
    {
    }
}
